--- a/index.html
+++ b/index.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B8A2-Gamer-Zone</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <header>
+        <nav class="nav">
+            <div class="nav-logo">
+                <div>
+                    <img src="images/Frame.png" alt="">
+                </div>
+                <h2 class="logo-title"><span>G</span>amer</h2>
+            </div>
+            <div class="nav-menu">
+                <li>About Us</li>
+                <li>Developers</li>
+                <div class="btn">
+                    <div class="btn-menu">Follow Us On <i class="fa-brands fa-youtube"></i> <i class="fa-brands fa-tiktok"></i> </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <div class="banner">
+                <div class="banner-left">
+                    <h2>Play Like The</h2>
+                    <h1>G.O.A.T.</h1>
+                    <p>1-Click instant play</p>
+                    <p>No Download</p>
+                    <p>1000s of supported online games</p>
+                </div>
+                <div class="banner-right">
+                    <img src="images/Group18.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
