--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B8A2-Gamer-Zone</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/mediaQuery.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -31,9 +32,13 @@
                 <div class="banner-left">
                     <h2>Play Like The</h2>
                     <h1>G.O.A.T.</h1>
-                    <p>1-Click instant play</p>
-                    <p>No Download</p>
-                    <p>1000s of supported online games</p>
+                    <p><i class="fa-solid fa-play"></i>1-Click instant play</p>
+                    <p><i class="fa-solid fa-arrow-down"></i>No Download</p>
+                    <p><i class="fa-solid fa-user-group"></i>1000s of supported online games</p>
+                    <div>
+                        <button class="banner-btn1">SIGN IN</button>
+                        <button class="banner-btn2">Go Rogue</button>
+                    </div>
                 </div>
                 <div class="banner-right">
                     <img src="images/Group18.png" alt="">
