--- a/index.html
+++ b/index.html
@@ -45,6 +45,32 @@
                 </div>
             </div>
         </section>
+        <!-- online game start -->
+        <section>
+            <div class="online-content">
+                <h2>Online Games<span class="funny"> Funny Videos</span></h2>
+            <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="online-game-container">
+                <div class="card">
+                    <img src="images/Rectangle4.png" alt="">
+                    <p></p>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle5.png" alt="">
+                    <p></p>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle7.png" alt="">
+                    <p></p>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle6.png" alt="">
+                    <p></p>
+                </div>
+            </div>
+        </section>
+        <!-- online game end -->
     </main>
     <footer>
 
