added player section

--- a/index.html
+++ b/index.html
@@ -71,9 +71,36 @@
             </div>
         </section>
         <!-- online game end -->
+        <section class="play-section">
+            <div class="play-container">
+                <div class="play-content">
+                <h2>Play Instantly, <br>
+                    No Downloads <br>
+                    No Installs.</h2>
+                    <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+                </div>
+                <div class="play-img">
+                    <img class="play-img1" src="images/Rectangle55.png" alt="">
+                    <div class="play-img2">
+                        <img src="images/Rectangle66.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="footer">
+            <img class="footer-img" src="images/Frame.png" alt="">
+            <h2><span>G</span>amer</h2>
+        </div>
+        <div class="footer name">
+            <h1>Our Story</h1>
+            <h6></h6>
+            <h6></h6>
+            <h6></h6>
+            <h6></h6>
+            <h6></h6>
+        </div>
     </footer>
 </body>
 </html>
