added responsive button section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B8A2-Gamer-Zone</title>
+    <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/mediaQuery.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -54,37 +55,52 @@
             <div class="online-game-container">
                 <div class="card">
                     <img src="images/Rectangle4.png" alt="">
-                    <p></p>
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
                 <div class="card">
                     <img src="images/Rectangle5.png" alt="">
-                    <p></p>
+                    <p>Did you score? #unblockedgames #school</p>
                 </div>
                 <div class="card">
                     <img src="images/Rectangle7.png" alt="">
-                    <p></p>
+                    <p>Breaking game records like OG</p>
                 </div>
                 <div class="card">
                     <img src="images/Rectangle6.png" alt="">
-                    <p></p>
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>
             </div>
         </section>
-        <!-- online game end -->
+        <!-- online game end
         <section class="play-section">
             <div class="play-container">
                 <div class="play-content">
                 <h2>Play Instantly, <br>
                     No Downloads <br>
                     No Installs.</h2>
-                    <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+                    <p>Play games online for free without <br> downloading. Just click the Play  <br> and play instantly in your browser.</p>
                 </div>
                 <div class="play-img">
-                    <img class="play-img1" src="images/Rectangle55.png" alt="">
-                    <div class="play-img2">
-                        <img src="images/Rectangle66.png" alt="">
+                    
+                        <img src="images/Rectangle55.png" alt="">
+                    
+                    <div>
+                        <img class="play-img2" src="images/Rectangle66.png" alt="">
                     </div>
                 </div>
+            </div>
+        </section> -->
+        <section class="btn-section">
+            <div class="btn-container">
+                <button><img src="images/Rectangle11.png" alt=""> Action Games</button>
+                <button><img src="images/Rectangle12.png" alt=""> Adventure Games</button>
+                <button><img src="images/Rectangle13.png" alt=""> Arcade Games</button>
+                <button><img src="images/Rectangle14.png" alt=""> Educational Games</button>
+                <button><img src="images/Rectangle15.png" alt=""> Word Games</button>
+                <button><img src="images/Rectangle16.png" alt=""> Role Playing Games</button>
+                <button><img src="images/Rectangle17.png" alt=""> Music & Audio Games</button>
+                <button><img src="images/Rectangle19.png" alt=""> Puzzle Games</button>
+                <button><img src="images/Rectangle12.png" alt=""> Strategy Games</button>
             </div>
         </section>
     </main>
@@ -94,12 +110,29 @@
             <h2><span>G</span>amer</h2>
         </div>
         <div class="footer name">
-            <h1>Our Story</h1>
-            <h6></h6>
-            <h6></h6>
-            <h6></h6>
-            <h6></h6>
-            <h6></h6>
+            <h5>Our Story</h5>
+            <h5>Games</h5>
+            <h5>Web Games</h5>
+            <h5>Careers</h5>
+            <h5>Support</h5>
+            <h5>My Account</h5>
+        </div>
+        <div class="visiable-link">
+            <a href="https://twitter.com/i/flow/login?redirect_after_login=%2F%3Flang%3Den"><i class="fa-brands fa-square-twitter"></i></a>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.youtube.com/"><i class="fa-brands fa-square-youtube"></i></a>
+            <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></i></a>
+            <a href="https://www.apple.com/"><i class="fa-brands fa-apple"></i></a>
+        </div>
+        <div class="footer-title">
+            <p>Terms and Conditions</p>
+            <p>Privacy Policy</p>
+            <p>Cookie Policy</p>
+            <p>Privacy Settings</p>
+        </div>
+        <div class="footer-description">
+            <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
         </div>
     </footer>
 </body>
