added button and footer section responsive

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </nav>
     </header>
     <main>
+        <!-- banner section start -->
         <section>
             <div class="banner">
                 <div class="banner-left">
@@ -37,15 +38,17 @@
                     <p><i class="fa-solid fa-arrow-down"></i>No Download</p>
                     <p><i class="fa-solid fa-user-group"></i>1000s of supported online games</p>
                     <div>
-                        <button class="banner-btn1">SIGN IN</button>
-                        <button class="banner-btn2">Go Rogue</button>
+                    <button class="banner-btn1">SIGN IN</button>
+                    <button class="banner-btn2">Go Rogue</button>
                     </div>
-                </div>
-                <div class="banner-right">
+                    </div>
+                    <div class="banner-right">
                     <img src="images/Group18.png" alt="">
                 </div>
             </div>
         </section>
+        <!-- banner section end -->
+
         <!-- online game start -->
         <section>
             <div class="online-content">
@@ -62,7 +65,13 @@
                     <p>Did you score? #unblockedgames #school</p>
                 </div>
                 <div class="card">
-                    <img src="images/Rectangle7.png" alt="">
+                    <div class="image-container">
+                        <img class="hover-img" src="images/Rectangle7.png" alt="">
+                        <div class="overlay">
+                            <i class="fa-brands fa-square-youtube"></i>
+                            <p>watch Now</p>
+                        </div>
+                    </div>
                     <p>Breaking game records like OG</p>
                 </div>
                 <div class="card">
@@ -71,11 +80,13 @@
                 </div>
             </div>
         </section>
-        <!-- online game end
+        <!-- online section end -->
+
+        <!-- play section start -->
         <section class="play-section">
             <div class="play-container">
                 <div class="play-content">
-                <h2>Play Instantly, <br>
+                <h2><span>Play Instantly,</span><br>
                     No Downloads <br>
                     No Installs.</h2>
                     <p>Play games online for free without <br> downloading. Just click the Play  <br> and play instantly in your browser.</p>
@@ -89,41 +100,88 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
+        <!-- play section end -->
+
+        <!-- button section start -->
         <section class="btn-section">
             <div class="btn-container">
-                <button><img src="images/Rectangle11.png" alt=""> Action Games</button>
-                <button><img src="images/Rectangle12.png" alt=""> Adventure Games</button>
-                <button><img src="images/Rectangle13.png" alt=""> Arcade Games</button>
-                <button><img src="images/Rectangle14.png" alt=""> Educational Games</button>
+                <div>
+                    <button><img src="images/Rectangle11.png" alt=""> Action Games</button>
+                </div>
+                <div>
+                    <button><img src="images/Rectangle12.png" alt=""> Adventure Games</button>
+                </div>
+                <div>
+                    <button><img src="images/Rectangle13.png" alt=""> Arcade Games</button>
+                </div>
+                <div>
+                    <button><img src="images/Rectangle14.png" alt=""> Educational Games</button>
+                </div>
+               <div>
                 <button><img src="images/Rectangle15.png" alt=""> Word Games</button>
-                <button><img src="images/Rectangle16.png" alt=""> Role Playing Games</button>
-                <button><img src="images/Rectangle17.png" alt=""> Music & Audio Games</button>
-                <button><img src="images/Rectangle19.png" alt=""> Puzzle Games</button>
-                <button><img src="images/Rectangle12.png" alt=""> Strategy Games</button>
+               </div>
+                <div>
+                    <button><img src="images/Rectangle16.png" alt=""> Role Playing Games</button>
+                </div>
+                <div>
+                    <button><img src="images/Rectangle17.png" alt=""> Music & Audio Games</button>
+                </div>
+                <div>
+                    <button><img src="images/Rectangle19.png" alt=""> Puzzle Games</button>
+                </div>
+                <div>
+                    <button><img src="images/Rectangle12.png" alt=""> Strategy Games</button>
+                </div>
             </div>
         </section>
+        <!-- button section end -->
+
     </main>
+    <!-- footer section start -->
     <footer>
         <div class="footer">
             <img class="footer-img" src="images/Frame.png" alt="">
             <h2><span>G</span>amer</h2>
         </div>
-        <div class="footer name">
-            <h5>Our Story</h5>
-            <h5>Games</h5>
-            <h5>Web Games</h5>
-            <h5>Careers</h5>
-            <h5>Support</h5>
-            <h5>My Account</h5>
+        <div class="footer-name">
+            <div><p class="footer-para">Our Story</p></div>
+            <div>
+                <p class="footer-para">Games</p>
+            </div>
+            <div>
+                <p class="footer-para">Web Games</p>
+            </div>
+            <div>
+                <p class="footer-para">Careers</p>
+            </div>
+            <div>
+                <p class="footer-para">Support</p>
+            </div>
+            <div>
+                <p class="footer-para">My Account</p>
+            </div>
         </div>
         <div class="visiable-link">
-            <a href="https://twitter.com/i/flow/login?redirect_after_login=%2F%3Flang%3Den"><i class="fa-brands fa-square-twitter"></i></a>
-            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.youtube.com/"><i class="fa-brands fa-square-youtube"></i></a>
-            <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></i></a>
-            <a href="https://www.apple.com/"><i class="fa-brands fa-apple"></i></a>
+            <div>
+                <a href="https://twitter.com/i/flow/login?redirect_after_login=%2F%3Flang%3Den"><i class="fa-brands fa-square-twitter"></i></a>
+            </div>
+            <div>
+                <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+            
+            </div>
+            <div>
+                <a href="https://www.youtube.com/"><i class="fa-brands fa-square-youtube"></i></a>
+            </div>
+            <div>
+                <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
+            <div>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></i></a>
+            </div>
+            <div>
+                <a href="https://www.apple.com/"><i class="fa-brands fa-apple"></i></a>
+            </div>
         </div>
         <div class="footer-title">
             <p>Terms and Conditions</p>
@@ -135,5 +193,6 @@
             <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
         </div>
     </footer>
+    <!-- footer section end -->
 </body>
 </html>
