added some classes

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <p class="footer-para">My Account</p>
             </div>
         </div>
-        <div class="visiable-link">
+        <div class="visible-link">
             <div>
                 <a href="https://twitter.com/i/flow/login?redirect_after_login=%2F%3Flang%3Den"><i class="fa-brands fa-square-twitter"></i></a>
             </div>
